graphql dependencies are replaced with new ones..

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,9 @@
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
-        <graphql-spring-boot-starter.version>5.0.2</graphql-spring-boot-starter.version>
-        <graphql-java-tools.version>5.2.4</graphql-java-tools.version>
+        <graphql.version>12.0.0</graphql.version>
+        <graphiql.version>11.1.0</graphiql.version>
+        <graphql-java-tools.version>12.0.0</graphql-java-tools.version>
     </properties>
 
     <dependencies>
@@ -31,19 +32,19 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-spring-boot-starter</artifactId>
-            <version>${graphql-spring-boot-starter.version}</version>
+            <version>${graphql.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-java-tools</artifactId>
             <version>${graphql-java-tools.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphiql-spring-boot-starter</artifactId>
-            <version>${graphql-spring-boot-starter.version}</version>
+            <version>${graphiql.version}</version>
         </dependency>
     </dependencies>
 
